# luaposixcli

./: .gitignore  .luacov  .stylua.toml  LICENSE  README.md  boot.sh  env.sh  meson.build  meson.options  mkinitramfs-host.sh  mkinitramfs.sh  notposix.c  notposix_test.lua  run.sh
awk/: awk.lua  eval.lua  eval_test.lua  lexer.lua  meson.build  parser.lua  parser_test.lua  test.sh
basename/: basename.lua  meson.build  test.sh
bc/: bc.lua  bignum.lua  meson.build  test.sh
cal/: cal.lua  meson.build  test.sh
cat/: cat.lua  meson.build  test.sh
chgrp/: chgrp.lua  meson.build  test.sh
chmod/: chmod.lua  meson.build  test.sh
chown/: chown.lua  meson.build  test.sh
cmp/: cmp.lua  meson.build  test.sh
comm/: comm.lua  meson.build  test.sh
cp/: cp.lua  meson.build  test.sh
cut/: cut.lua  meson.build  test.sh
date/: date.lua  meson.build  test.sh
dd/: dd.lua  meson.build  test.sh
df/: df.lua  meson.build  test.sh
diff/: diff.lua  meson.build  test.sh
dirname/: dirname.lua  meson.build  test.sh
du/: du.lua  meson.build  test.sh
echo/: echo.lua  meson.build  test.sh
ed/: buffer.lua  buffer_test.lua  ed.lua  ex.lua  meson.build  terminfo.lua  vi.lua
env/: env.lua  meson.build  test.sh
expand/: expand.lua  meson.build  test.sh
expr/: expr.lua  meson.build  test.sh
extra/: meson.build
extra/ping/: meson.build  ping.lua
false/: false.lua  meson.build  test.sh
find/: find.lua  meson.build  test.sh
fold/: fold.lua  meson.build  test.sh
grep/: grep.lua  meson.build  test.sh
head/: head.lua  meson.build  test.sh
id/: id.lua  meson.build  test.sh
kill/: kill.lua  meson.build  test.sh
link/: link.lua  meson.build  test.sh
ln/: ln.lua  meson.build  test.sh
logger/: logger.lua  meson.build  test.sh
logname/: logname.lua  meson.build  test.sh
ls/: ls.lua  meson.build  test.sh
luaposixcli/: meson.build  sys.c  sys_test.lua
make/: eval.lua  eval_test.lua  exec.lua  jobserver.lua  make.lua  meson.build  parser.lua  parser_test.lua  test.sh
mkdir/: meson.build  mkdir.lua  test.sh
mkfifo/: meson.build  mkfifo.lua  test.sh
mktemp/: meson.build  mktemp.lua  test.sh
mv/: meson.build  mv.lua  test.sh
nice/: meson.build  nice.lua  test.sh
nohup/: meson.build  nohup.lua  test.sh
od/: meson.build  od.lua  test.sh
paste/: meson.build  paste.lua  test.sh
patch/: meson.build  patch.lua  test.sh
pr/: meson.build  pr.lua  test.sh
printf/: meson.build  printf.lua  test.sh
ps/: meson.build  ps.lua  sys.c  test.sh
pwd/: meson.build  pwd.lua  test.sh
renice/: meson.build  renice.lua  test.sh
rm/: meson.build  rm.lua  test.sh
rmdir/: meson.build  rmdir.lua  test.sh
sed/: meson.build  sed.lua  test.sh
seq/: meson.build  seq.lua  test.sh
sh/: README.md  cmdsub_test.lua  compound.lua  compound_multiline_test.lua  compound_test.lua  env.lua  exec.lua  expand.lua  lexer.lua  lexer_test.lua  list_test.lua  meson.build  parse.lua  prefix_assign_test.lua  redir_test.lua  sh.lua  test.lua  test.sh  test_test.lua  vars_test.lua  walk.lua
sleep/: meson.build  sleep.lua  test.sh
sort/: meson.build  sort.lua  test.sh
tail/: meson.build  tail.lua  test.sh
tar/: format.lua  format_test.lua  meson.build  pax.lua  tar.lua  test.sh
tee/: meson.build  tee.lua  test.sh
time/: meson.build  test.sh  time.lua
touch/: meson.build  test.sh  touch.lua
tr/: meson.build  test.sh  tr.lua
true/: meson.build  test.sh  true.lua
tty/: meson.build  test.sh  tty.lua
uname/: meson.build  test.sh  uname.lua
unexpand/: meson.build  test.sh  unexpand.lua
uniq/: meson.build  test.sh  uniq.lua
unlink/: meson.build  test.sh  unlink.lua
wc/: meson.build  test.sh  wc.lua
xargs/: meson.build  test.sh  xargs.lua
yes/: meson.build  test.sh  yes.lua
